--- a/Portfolio/portfolio/styles/globals.css
+++ b/Portfolio/portfolio/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 @layer base {
   body {
     @apply bg-[#FAF9F6] tracking-wide;
