--- a/daygrade/src/index.css
+++ b/daygrade/src/index.css
@@ -6,3 +6,21 @@ body {
   /* background-color: #faf9f6; */
   background-color: #e6e6e3;
 }
+
+/* .css-hlj6pa-MuiDialogActions-root {
+  display: none !important;
+}
+
+.css-1hbyad5-MuiTypography-root {
+  display: none !important;
+}
+
+.css-z3au5x-MuiButtonBase-root-MuiIconButton-root-MuiPickersToolbar-penIconButton {
+  display: none !important;
+}
+
+.css-xelq0e-MuiPickerStaticWrapper-content {
+  box-shadow: 3px 2px 10px 5px #888888;
+  padding: 1rem;
+  border-radius: 30px;
+} */
