--- a/daygrade/src/index.css
+++ b/daygrade/src/index.css
@@ -154,8 +154,8 @@
 
 #dark #time-setter {
   background-color: #41024d;
-  padding: 20px;
-  margin: 10px;
+  padding: 18px;
+  margin-bottom: 10px;
   border-radius: 20px;
   color: white;
 }
