--- a/daygrade/src/index.css
+++ b/daygrade/src/index.css
@@ -10,12 +10,12 @@
 /* } */
 
 #dark #log1 {
-  background-color: #41024d;
+  background-color: #2E2252;
   color: white;
 }
 
 #dark #log2 {
-  background-color: #41024d;
+  background-color: #2E2252;
   color: white;
 }
 
