completed delete account functionality which takes care of deleting everything that has to do with the user from the database

--- a/daygrade/src/index.css
+++ b/daygrade/src/index.css
@@ -10,12 +10,12 @@
 /* } */
 
 #dark #log1 {
-  background-color: #2E2252;
+  background-color: #2e2252;
   color: white;
 }
 
 #dark #log2 {
-  background-color: #2E2252;
+  background-color: #2e2252;
   color: white;
 }
 
